--- a/templates/base.html
+++ b/templates/base.html
@@ -67,13 +67,18 @@
         </li>
     </ul>
 
-    {% block content %}
-    {% endblock %}
+
 <header>
     <h1>Мой блог</h1>
+    {% block content %}
+    {% endblock %}
     <div class="auth-buttons">
-        <a href="/registration">Регистрация</a>
-        <a href="/login">Вход</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">Выйти</a>
+        {% else %}
+        <a href="{% url 'login' %}">Войти</a> |
+        <a href="{% url 'register' %}">Регистрация</a>
+        {% endif %}
     </div>
 </header>
 <main>
