Создали формы постов

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
 <main>
     <article>
         <h2 class="post-title">Заголовок статьи 1</h2>
-        <p class="post-meta">Автор: Имя автора | Дата: 01.01.2023</p>
+        <p class="post-meta">Автор: {{user}} | Дата: </p>
         <div class="post-content">
             <p>Содержимое статьи 1...</p>
         </div>
