--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,6 +11,6 @@
 <form action="{% url 'login' %}" method="post">
     {{form.as_p}}
     {% csrf_token %}
-    <button type="submit">Войти</button>
+    <button type="submit" class="btn btn=primary">Войти</button>
 </form>
 {% endblock %}
