--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мой блог</title>
+  {% load bootstrap5 %}
+  {% bootstrap_css %}
+  {% bootstrap_javascript %}
     <style>
     body {
       font-family: Arial, sans-serif;
@@ -64,15 +67,20 @@
     {% endblock %}
     <div class="auth-buttons">
         {% if user.is_authenticated %}
-            {{user}}
-            <a href="{% url 'logout' %}">Выйти</a>
+        <a class="btn btn-danger">{{user}}</a>
+            <a href="{% url 'logout' %}" class="btn btn-primary">Выйти</a>
         {% else %}
-        <a href="{% url 'login' %}">Войти</a> |
-        <a href="{% url 'register' %}">Регистрация</a>
+        <a href="{% url 'login' %}" class="btn btn-primary">Войти</a>
+        <a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a>
         {% endif %}
     </div>
 </header>
 <main>
+    {% if user.is_authenticated %}
+        <a href="{%url 'posts'%}" class="btn btn-dark">Создать пост</a>
+        {% block contentpost%}
+        {% endblock %}
+    {% endif %}
     <article>
         <h2 class="post-title">Заголовок статьи 1</h2>
         <p class="post-meta">Автор: {{user}} | Дата: </p>
