--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -7,6 +7,6 @@
     <form action="{% url 'register' %}" method="post">
         {{form}}
         {% csrf_token %}
-    <button type="submit">Регистрация</button>
+    <button type="submit" class="btn btn-primary">Регистрация</button>
     </form>
 {% endblock %}
