--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 
 {% block contentpost %}
-    <form action="{% url 'posts' %}" method="post">
+    <form action="{% url 'posts' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-
-    <button type="submit">Создать пост</button>
+    <button type="submit" >Создать пост</button>
 </form>
 {% endblock %}
