--- a/templates/base.html
+++ b/templates/base.html
@@ -62,27 +62,27 @@
 </head>
 <body>
 <header>
-    <h1> <a href="{% url 'home'%}">Мой блог</a></h1>
+    <h1> <a href="{% url 'post_view'%}">Блог</a></h1>
     {% block content %}
     {% endblock %}
     <div class="auth-buttons">
         {% if user.is_authenticated %}
+        <a href="{%url 'posts'%}" class="btn btn-dark">Создать пост</a>
         <a class="btn btn-danger">{{user}}</a>
             <a href="{% url 'logout' %}" class="btn btn-primary">Выйти</a>
         {% else %}
         <a href="{% url 'login' %}" class="btn btn-primary">Войти</a>
         <a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a>
         {% endif %}
+
     </div>
 </header>
-<main>
-    {% if user.is_authenticated %}
-        <a href="{%url 'posts'%}" class="btn btn-dark">Создать пост</a>
+<div class="content">
         {% block contentpost%}
         {% endblock %}
-    {% endif %}
         {% block contentview %}
         {% endblock %}
-</main>
+
+</div>
 </body>
 </html>
